--- a/flickr-CoreData/Base.lproj/Main.storyboard
+++ b/flickr-CoreData/Base.lproj/Main.storyboard
@@ -1,25 +1,109 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp0-kx-lUg">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Flickr ImageVC-->
+        <scene sceneID="fyz-u9-OGI">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="Kp0-kx-lUg" customClass="FlickrImageVC" customModule="flickr_CoreData" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
+                        <viewControllerLayoutGuide type="top" id="gGV-rX-L9K"/>
+                        <viewControllerLayoutGuide type="bottom" id="XTu-aa-4jU"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                    <view key="view" contentMode="scaleToFill" id="Qad-kU-lMk">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flickr-logo" translatesAutoresizingMaskIntoConstraints="NO" id="9nA-7G-TpY">
+                                <rect key="frame" x="20" y="0.0" width="560" height="144"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="gdH-ye-vY2"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="gdH-ye-vY2"/>
+                                    </mask>
+                                </variation>
+                            </imageView>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7l2-mp-vEC">
+                                <rect key="frame" x="20" y="149" width="560" height="431"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="317" id="cBE-d5-xlU"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="hjv-E3-upw">
+                                    <size key="itemSize" width="132" height="132"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="flickrImageCell" id="bZX-o1-VPr" customClass="FlickrCollectionViewCell" customModule="flickr_CoreData" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="132" height="132"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
+                                            <rect key="frame" x="0.0" y="0.0" width="132" height="132"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iCX-LB-vk0">
+                                                    <rect key="frame" x="13" y="13" width="106" height="106"/>
+                                                </imageView>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                        </view>
+                                        <constraints>
+                                            <constraint firstItem="iCX-LB-vk0" firstAttribute="top" secondItem="bZX-o1-VPr" secondAttribute="topMargin" constant="5" id="OHw-bx-y8p"/>
+                                            <constraint firstAttribute="trailingMargin" secondItem="iCX-LB-vk0" secondAttribute="trailing" constant="5" id="OMv-Y0-Nwq"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="iCX-LB-vk0" secondAttribute="bottom" constant="5" id="fFn-Mm-jbE"/>
+                                            <constraint firstItem="iCX-LB-vk0" firstAttribute="leading" secondItem="bZX-o1-VPr" secondAttribute="leadingMargin" constant="5" id="ncW-bn-uPa"/>
+                                        </constraints>
+                                        <connections>
+                                            <outlet property="flickrCellImageView" destination="iCX-LB-vk0" id="OfD-8i-HwF"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="cBE-d5-xlU"/>
+                                    </mask>
+                                </variation>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="7l2-mp-vEC" secondAttribute="trailing" id="3Oy-rc-5my"/>
+                            <constraint firstItem="9nA-7G-TpY" firstAttribute="leading" secondItem="Qad-kU-lMk" secondAttribute="leadingMargin" id="6jz-9u-SpJ"/>
+                            <constraint firstItem="9nA-7G-TpY" firstAttribute="top" secondItem="Qad-kU-lMk" secondAttribute="topMargin" id="8Xs-td-OjJ"/>
+                            <constraint firstItem="7l2-mp-vEC" firstAttribute="height" secondItem="9nA-7G-TpY" secondAttribute="height" multiplier="3:1" id="EvU-yH-1KM"/>
+                            <constraint firstItem="7l2-mp-vEC" firstAttribute="top" secondItem="9nA-7G-TpY" secondAttribute="bottom" constant="5" id="KhS-Vz-ZGa"/>
+                            <constraint firstItem="9nA-7G-TpY" firstAttribute="top" secondItem="gGV-rX-L9K" secondAttribute="bottom" id="QLK-Lh-e9p"/>
+                            <constraint firstItem="7l2-mp-vEC" firstAttribute="leading" secondItem="Qad-kU-lMk" secondAttribute="leadingMargin" id="cBd-48-5ZQ"/>
+                            <constraint firstItem="XTu-aa-4jU" firstAttribute="top" secondItem="7l2-mp-vEC" secondAttribute="bottom" constant="20" id="sIe-9U-z1z"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9nA-7G-TpY" secondAttribute="trailing" id="uz7-lc-Tta"/>
+                            <constraint firstItem="7l2-mp-vEC" firstAttribute="top" secondItem="9nA-7G-TpY" secondAttribute="bottom" constant="5" id="xYJ-F9-t8V"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="QLK-Lh-e9p"/>
+                                <exclude reference="KhS-Vz-ZGa"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <connections>
+                        <outlet property="flickrCollectionView" destination="7l2-mp-vEC" id="v92-51-rcV"/>
+                    </connections>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="brY-tZ-rp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="126" y="133"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="flickr-logo" width="2000" height="607"/>
+    </resources>
 </document>
