--- a/flickr-CoreData/Base.lproj/Main.storyboard
+++ b/flickr-CoreData/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp0-kx-lUg">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Kp0-kx-lUg">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -53,16 +53,26 @@
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="iCX-LB-vk0">
                                                     <rect key="frame" x="13" y="13" width="106" height="106"/>
                                                 </imageView>
+                                                <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="UJM-Ii-5Ym">
+                                                    <rect key="frame" x="56" y="56" width="20" height="20"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="20" id="AN7-2b-XL5"/>
+                                                        <constraint firstAttribute="width" constant="20" id="yAF-Cd-TtQ"/>
+                                                    </constraints>
+                                                </activityIndicatorView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
+                                            <constraint firstItem="UJM-Ii-5Ym" firstAttribute="centerY" secondItem="bZX-o1-VPr" secondAttribute="centerY" id="IqX-mQ-XaC"/>
                                             <constraint firstItem="iCX-LB-vk0" firstAttribute="top" secondItem="bZX-o1-VPr" secondAttribute="topMargin" constant="5" id="OHw-bx-y8p"/>
                                             <constraint firstAttribute="trailingMargin" secondItem="iCX-LB-vk0" secondAttribute="trailing" constant="5" id="OMv-Y0-Nwq"/>
+                                            <constraint firstItem="UJM-Ii-5Ym" firstAttribute="centerX" secondItem="bZX-o1-VPr" secondAttribute="centerX" id="VJv-T4-EE7"/>
                                             <constraint firstAttribute="bottomMargin" secondItem="iCX-LB-vk0" secondAttribute="bottom" constant="5" id="fFn-Mm-jbE"/>
                                             <constraint firstItem="iCX-LB-vk0" firstAttribute="leading" secondItem="bZX-o1-VPr" secondAttribute="leadingMargin" constant="5" id="ncW-bn-uPa"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="flickrCellActivityIndicator" destination="UJM-Ii-5Ym" id="8U8-BM-C1g"/>
                                             <outlet property="flickrCellImageView" destination="iCX-LB-vk0" id="OfD-8i-HwF"/>
                                         </connections>
                                     </collectionViewCell>
