--- a/flickr-CoreData/Base.lproj/Main.storyboard
+++ b/flickr-CoreData/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="flickr-logo" translatesAutoresizingMaskIntoConstraints="NO" id="9nA-7G-TpY">
-                                <rect key="frame" x="20" y="0.0" width="560" height="144"/>
+                                <rect key="frame" x="20" y="0.0" width="560" height="138"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="gdH-ye-vY2"/>
                                 </constraints>
@@ -31,7 +31,7 @@
                                 </variation>
                             </imageView>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7l2-mp-vEC">
-                                <rect key="frame" x="0.0" y="149" width="600" height="431"/>
+                                <rect key="frame" x="0.0" y="143" width="600" height="415"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="317" id="cBE-d5-xlU"/>
@@ -83,19 +83,33 @@
                                     </mask>
                                 </variation>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Pkf-mh-5ig">
+                                <rect key="frame" x="0.0" y="558" width="600" height="42"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="42" id="0r1-Zy-ilf"/>
+                                </constraints>
+                                <state key="normal" title="New Collection"/>
+                                <connections>
+                                    <action selector="newCollectionTapped:" destination="Kp0-kx-lUg" eventType="touchUpInside" id="kTs-Ux-ehH"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstAttribute="trailingMargin" secondItem="7l2-mp-vEC" secondAttribute="trailing" id="3Oy-rc-5my"/>
+                            <constraint firstItem="Pkf-mh-5ig" firstAttribute="leading" secondItem="Qad-kU-lMk" secondAttribute="leading" id="5iu-I9-1WQ"/>
                             <constraint firstItem="9nA-7G-TpY" firstAttribute="leading" secondItem="Qad-kU-lMk" secondAttribute="leadingMargin" id="6jz-9u-SpJ"/>
                             <constraint firstItem="9nA-7G-TpY" firstAttribute="top" secondItem="Qad-kU-lMk" secondAttribute="topMargin" id="8Xs-td-OjJ"/>
+                            <constraint firstAttribute="trailing" secondItem="Pkf-mh-5ig" secondAttribute="trailing" id="C6X-Ny-flq"/>
+                            <constraint firstItem="XTu-aa-4jU" firstAttribute="top" secondItem="Pkf-mh-5ig" secondAttribute="bottom" id="Cp6-he-d7O"/>
                             <constraint firstItem="7l2-mp-vEC" firstAttribute="height" secondItem="9nA-7G-TpY" secondAttribute="height" multiplier="3:1" id="EvU-yH-1KM"/>
                             <constraint firstItem="7l2-mp-vEC" firstAttribute="top" secondItem="9nA-7G-TpY" secondAttribute="bottom" constant="5" id="KhS-Vz-ZGa"/>
                             <constraint firstItem="7l2-mp-vEC" firstAttribute="leading" secondItem="Qad-kU-lMk" secondAttribute="leading" id="PQn-hS-sIR"/>
                             <constraint firstItem="9nA-7G-TpY" firstAttribute="top" secondItem="gGV-rX-L9K" secondAttribute="bottom" id="QLK-Lh-e9p"/>
+                            <constraint firstItem="Pkf-mh-5ig" firstAttribute="top" secondItem="7l2-mp-vEC" secondAttribute="bottom" id="aXp-aA-DJG"/>
                             <constraint firstItem="7l2-mp-vEC" firstAttribute="leading" secondItem="Qad-kU-lMk" secondAttribute="leadingMargin" id="cBd-48-5ZQ"/>
                             <constraint firstAttribute="trailing" secondItem="7l2-mp-vEC" secondAttribute="trailing" id="hOQ-ir-aUw"/>
-                            <constraint firstItem="XTu-aa-4jU" firstAttribute="top" secondItem="7l2-mp-vEC" secondAttribute="bottom" constant="20" id="sIe-9U-z1z"/>
+                            <constraint firstItem="XTu-aa-4jU" firstAttribute="top" secondItem="7l2-mp-vEC" secondAttribute="bottom" constant="60" id="sIe-9U-z1z"/>
                             <constraint firstAttribute="trailingMargin" secondItem="9nA-7G-TpY" secondAttribute="trailing" id="uz7-lc-Tta"/>
                             <constraint firstItem="7l2-mp-vEC" firstAttribute="top" secondItem="9nA-7G-TpY" secondAttribute="bottom" constant="5" id="xYJ-F9-t8V"/>
                         </constraints>
@@ -105,12 +119,14 @@
                                 <exclude reference="3Oy-rc-5my"/>
                                 <exclude reference="KhS-Vz-ZGa"/>
                                 <exclude reference="cBd-48-5ZQ"/>
+                                <exclude reference="sIe-9U-z1z"/>
                             </mask>
                         </variation>
                     </view>
                     <connections>
                         <outlet property="flickrCollectionView" destination="7l2-mp-vEC" id="v92-51-rcV"/>
                         <outlet property="flowLayout" destination="hjv-E3-upw" id="fE2-RR-vwk"/>
+                        <outlet property="newCollectionButton" destination="Pkf-mh-5ig" id="cWK-iL-kac"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="brY-tZ-rp3" userLabel="First Responder" sceneMemberID="firstResponder"/>
